apps/pern-app-standard/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pern-standard
  labels:
    app.kubernetes.io/name: pern-standard
    app.kubernetes.io/part-of: pern-app-standard
    deployment-type: standard-k8s
