apps/pern-app-standard/base/redis-resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: redis
    protocol: TCP
    name: redis
  selector:
    app: redis
